<resources>
    <string name="app_name">HIIT TIMER</string>
    <string name="toolbar_title_interval_setup">HIIT TIMER</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="reset">Reset</string>
    <string name="stopped">Stopped</string>
    <string name="get_ready">Get Ready</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cool_down">Cool Down</string>
    <string name="completed">Completed</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_home">Home</string>
    <string name="title_save">Save</string>
    <string name="title_folder">Folder</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_toolbar">Settings</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="done">Done!</string>
    <string name="paused">Paused</string>
    <string name="sets">Sets</string>
    <string name="decrease_sets">Decrease Sets</string>
    <string name="_5">5</string>
    <string name="increase_sets">Increase Sets</string>
    <string name="decrease_get_ready_time">Decrease Get Ready Time</string>
    <string name="_00">00</string>
    <string name="colon_separator">:</string>
    <string name="initial_time_10">10</string>
    <string name="increase_get_ready_time">Increase Get Ready Time</string>
    <string name="label_timer_per_set">Timer Per Set</string>
    <string name="decrease_work_time">Decrease Work Time</string>
    <string name="initial_time_30">30</string>
    <string name="increase_work_time">Increase Work Time</string>
    <string name="decrease_rest_time">Decrease Rest Time</string>
    <string name="initial_time_15">15</string>
    <string name="increase_rest_time">Increase Rest Time</string>
    <string name="decrease_cool_down_time">Decrease Cool Down Time</string>
    <string name="initial_time_20">20</string>
    <string name="increase_cool_down_time">Increase Cool Down Time</string>
    <string name="label_total_time">Total Time</string> <!-- This might be unused now -->
    <string name="display_total_time_initial">00 : 00</string> <!-- This might be unused now -->
    <string name="display_countdown_initial">00:10</string>

    <string name="label_total_workout_timer">Total Workout Timer</string>
    <string name="initial_total_workout_time_0000">0000</string>
    <string name="decrease_total_workout_time">Decrease Total Workout Time</string>
    <string name="increase_total_workout_time">Increase Total Workout Time</string>

    <string name="hint_sets_count">Number of sets</string>
    <string name="hint_get_ready_minutes">Get ready minutes</string>
    <string name="hint_get_ready_seconds">Get ready seconds</string>
    <string name="hint_work_minutes">Work minutes</string>
    <string name="hint_work_seconds">Work seconds</string>
    <string name="hint_rest_minutes">Rest minutes</string>
    <string name="hint_rest_seconds">Rest seconds</string>
    <string name="hint_cool_down_minutes">Cool down minutes</string>
    <string name="hint_cool_down_seconds">Cool down seconds</string>
    <string name="hint_enter_time_in_seconds">Enter time in seconds</string>
    <string name="bug_report">Bug Report</string>
    <string name="tip_jar">Tip Jar</string>
    <string name="banner_ad_unit_id_settings">ca-app-pub-3940256099942544/6300978111</string>
    <string name="back_arrow_description">Back</string>
    <string name="default_preset_duration">00:00</string>
    <string name="content_description_delete_preset_button">Delete Preset</string>
    <string name="load_workout">Load Workout</string>
</resources>