<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="20sp"
        android:textColor="@color/toolbarTitleColor"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bug_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_report"
        android:backgroundTint="@color/bug_report_button_background_color"
        android:textColor="@color/bug_report_button_text_color"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tip_jar_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/tip_jar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_jar"
        android:backgroundTint="@color/bug_report_button_background_color"
        android:textColor="@color/bug_report_button_text_color"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bug_report_button"
        app:layout_constraintBottom_toTopOf="@+id/back_arrow_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/back_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backarrow"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow_description"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>